// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`case-sensitive.html - parse5-verify 1`] = `
<CaseSensitive CaseSensitive="true">hello world</CaseSensitive>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<CaseSensitive CaseSensitive="true">hello world</CaseSensitive>

`;

exports[`pre.html - parse5-verify 1`] = `
<pre>
--------------------------------------------------------------------------------


                                      *         *       *
                                     **        **      ***
                                     **        **       *
   ****    ***  ****               ********  ********                   ***  ****
  * ***  *  **** **** *    ***    ********  ********  ***        ***     **** **** *
 *   ****    **   ****    * ***      **        **      ***      * ***     **   ****
**    **     **          *   ***     **        **       **     *   ***    **
**    **     **         **    ***    **        **       **    **    ***   **
**    **     **         ********     **        **       **    ********    **
**    **     **         *******      **        **       **    *******     **
**    **     **         **           **        **       **    **          **
*******      ***        ****    *    **        **       **    ****    *   ***
******        ***        *******      **        **      *** *  *******     ***
**                        *****                          ***    *****
**
**
 **

--------------------------------------------------------------------------------
</pre>
<pre>

        Text in a pre element

    is displayed in a fixed-width

   font, and it preserves

   both             spaces and

   line breaks

</pre>
<pre>     Foo     Bar     </pre>
<pre>
     Foo     Bar
</pre>
<pre>Foo     Bar
</pre>
<pre>
     Foo     Bar</pre>
<figure role="img" aria-labelledby="cow-caption">
  <pre>
___________________________
< I'm an expert in my field. >
---------------------------
     \\   ^__^
      \\  (oo)\\_______
         (__)\\       )\\/\\
             ||----w |
             ||     ||
___________________________
  </pre>
  <figcaption id="cow-caption">
    A cow saying, "I'm an expert in my field." The cow is illustrated using preformatted text characters.
  </figcaption>
</figure>
<pre data-attr-1="foo" data-attr-2="foo" data-attr-3="foo" data-attr-4="foo" data-attr-5="foo" data-attr-6="foo">
     Foo     Bar
</pre>
<div>
  <div>
    <div>
      <div>
        <pre>
          ______
          STRING
          ______
        </pre>
      </div>
    </div>
  </div>
</div>
<pre></pre>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<pre>
--------------------------------------------------------------------------------


                                      *         *       *
                                     **        **      ***
                                     **        **       *
   ****    ***  ****               ********  ********                   ***  ****
  * ***  *  **** **** *    ***    ********  ********  ***        ***     **** **** *
 *   ****    **   ****    * ***      **        **      ***      * ***     **   ****
**    **     **          *   ***     **        **       **     *   ***    **
**    **     **         **    ***    **        **       **    **    ***   **
**    **     **         ********     **        **       **    ********    **
**    **     **         *******      **        **       **    *******     **
**    **     **         **           **        **       **    **          **
*******      ***        ****    *    **        **       **    ****    *   ***
******        ***        *******      **        **      *** *  *******     ***
**                        *****                          ***    *****
**
**
 **

--------------------------------------------------------------------------------
</pre>
<pre>

        Text in a pre element

    is displayed in a fixed-width

   font, and it preserves

   both             spaces and

   line breaks

</pre>
<pre>     Foo     Bar     </pre>
<pre>
     Foo     Bar
</pre>
<pre>Foo     Bar
</pre>
<pre>
     Foo     Bar</pre>
<figure role="img" aria-labelledby="cow-caption">
  <pre>
___________________________
< I'm an expert in my field. >
---------------------------
     \\   ^__^
      \\  (oo)\\_______
         (__)\\       )\\/\\
             ||----w |
             ||     ||
___________________________
  </pre>
  <figcaption id="cow-caption">
    A cow saying, "I'm an expert in my field." The cow is illustrated using preformatted text characters.
  </figcaption>
</figure>
<pre
  data-attr-1="foo"
  data-attr-2="foo"
  data-attr-3="foo"
  data-attr-4="foo"
  data-attr-5="foo"
  data-attr-6="foo"
>
     Foo     Bar
</pre>
<div>
  <div>
    <div>
      <div>
        <pre>
          ______
          STRING
          ______
        </pre>
      </div>
    </div>
  </div>
</div>
<pre></pre>

`;

exports[`tags.html - parse5-verify 1`] = `
<br/>
<br />
<br  />
<br
/>
<br attribute-a />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute />
<br attribute-a="value" />
<br
  attribute-a="value"
/>
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value" />
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value" />
<br attribute-a="value" attribute-b="value" attribute-c="value" attribute-d="value" attribute-e="value" attribute-f="value" />
<div>string</div>
<div>very very very very very very very very very very very very very very very very long string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute>string</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value">string</div>
<div attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value">string</div>
<div attribute="value">very very very very very very very very very very very very very very very very long string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">string</div>
<div attribute="value" attributea="value" attributeb="value" attributec="value" attributed="value" attributef="value">very very very very very very very very very very very very very very very very long string</div>
<video width="320" height="240" controls>
  <source src="movie.mp4" type="video/mp4">
  <source src="movie.ogg" type="video/ogg">
  Your browser does not support the video tag.
</video>
<div><div>string</div></div>
<div><div>string</div><div>string</div></div>
<div><div><div>string</div></div><div>string</div></div>
<div><div>string</div><div><div>string</div></div></div>
<div><div></div></div>
<div><div></div><div></div></div>
<div><div><div><div><div><div><div>string</div></div></div></div></div></div></div>
<div>
  <div>string</div>
</div>
<div>

  <div>string</div>

</div>
<div>

  <div>string</div>

  <div>string</div>

</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<br />
<br />
<br />
<br />
<br attribute-a />
<br
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute
/>
<br attribute-a="value">
<br attribute-a="value">
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value">
<br very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value">
<br
  attribute-a="value"
  attribute-b="value"
  attribute-c="value"
  attribute-d="value"
  attribute-e="value"
  attribute-f="value"
/>
<div>string</div>
<div>
  very very very very very very very very very very very very very very very very long string
</div>
<div
  very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute
>
  string
</div>
<div very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-attribute="value">
  string
</div>
<div attribute="very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value">
  string
</div>
<div attribute="value">
  very very very very very very very very very very very very very very very very long string
</div>
<div
  attribute="value"
  attributea="value"
  attributeb="value"
  attributec="value"
  attributed="value"
  attributef="value"
>
  string
</div>
<div
  attribute="value"
  attributea="value"
  attributeb="value"
  attributec="value"
  attributed="value"
  attributef="value"
>
  very very very very very very very very very very very very very very very very long string
</div>
<video width="320" height="240" controls>
  <source src="movie.mp4" type="video/mp4" />
  <source src="movie.ogg" type="video/ogg" />
  Your browser does not support the video tag.
</video>
<div>
  <div>string</div>
</div>
<div>
  <div>string</div>
  <div>string</div>
</div>
<div>
  <div>
    <div>string</div>
  </div>
  <div>string</div>
</div>
<div>
  <div>string</div>
  <div>
    <div>string</div>
  </div>
</div>
<div>
  <div></div>
</div>
<div>
  <div></div>
  <div></div>
</div>
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>string</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<div>
  <div>string</div>
</div>
<div>
  <div>string</div>
</div>
<div>
  <div>string</div>

  <div>string</div>
</div>

`;

exports[`textarea.html - parse5-verify 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <div>
                        <textarea rows="10" cols="45" name="text">
                        String
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<textarea></textarea>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <div>
                        <textarea rows="10" cols="45" name="text">
                        String
                        </textarea>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<textarea></textarea>

`;

exports[`unsupported.html - parse5-verify 1`] = `
<center></center>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<center></center>

`;
